<resources>
    <string name="app_name">simplMeteoByGpsPoint</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_articles_title">Search Articles</string>
    <string name="notifications_toolbar">Notifications</string>
    <string name="help_toolbar">Help</string>
    <string name="about_toolbar">About</string>
    <string name="search_query_term">Your Search Query Term</string>
    <string name="datepicker_text_begin_date">Begin Date</string>
    <string name="datepicker_text_end_date">End date</string>
    <string name="checkbox_arts">Arts</string>
    <string name="checkbox_politics">Politics</string>
    <string name="checkbox_business">Business</string>
    <string name="checkbox_sports">Sports</string>
    <string name="checkbox_entrepreneurs">Entrepreneurs</string>
    <string name="checkbox_travel">Travel</string>
    <string name="search_button_search_activity">SEARCH</string>
    <string name="Notifications">Notifications</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="now">Currently in : </string>
    <string name="cityName">cityName</string>
    <string name="country">country</string>
    <string name="temperature">Temperature (°C) :</string>
    <string name="hard_coded_temperature">Temperature (°C) :</string>
    <string name="real_temperature">37.2</string>
    <string name="hard_coded_wind">Wind (km/h) :</string>
    <string name="real_wind">5.2</string>
    <string name="YourCoordinates">Update Coordinates</string>


</resources>
